force-app/main/default/objects/QB_Customer__c/QB_Customer__c.object-meta.xml
<CustomObject>
    <label>QB Customer</label>
    <nameField>
        <label>QB Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>