force-app/main/default/objects/QB_Customer__c/fields/Billing_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_Address__c</fullName>
    <label>Billing Street Address</label>
    <type>TextArea</type>
</CustomField>