force-app/main/default/objects/QB_Customer__c/fields/Customer_Currency_Reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_Currency_Reference__c</fullName>
    <label>Customer Currency Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>