force-app/main/default/objects/QB_Customer__c/fields/QB_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>QB_Customer_Id__c</fullName>
    <externalId>true</externalId>
    <label>QB Customer Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>