force-app/main/default/objects/QB_Customer__c/fields/Qb_Customer_Sync_Token__c.field-meta.xml
<CustomField>
    <fullName>Qb_Customer_Sync_Token__c</fullName>
    <label>Qb Customer Sync Token</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>