force-app/main/default/objects/QB_Customer__c/fields/Shipping_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Street_Address__c</fullName>
    <label>Shipping Street Address</label>
    <type>TextArea</type>
</CustomField>