force-app/main/default/objects/QB_Customer__c/fields/Shipping_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Zip_Code__c</fullName>
    <label>Shipping Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>